this is changed my focus

--- a/index.html
+++ b/index.html
@@ -184,12 +184,10 @@
         <div class="skills-right">
             <h3 class="hhh">What I’m Currently Focusing On</h3>
             <p>
-                I am actively strengthening my front-end development skills by building
-                responsive and interactive websites using HTML, CSS, and JavaScript.
-                Alongside this, I am revising Java fundamentals and object-oriented
-                programming concepts to improve problem-solving and backend readiness.
-                My current focus is on writing clean beginner-level code while
-                understanding how real-world applications are structured.
+                <p>
+                  I am actively enhancing my front-end development skills by building responsive and interactive websites using HTML, CSS, and JavaScript. At the same time, I am revisiting Java fundamentals and object-oriented programming concepts to strengthen my problem-solving and backend readiness. My current focus is on writing clean, maintainable code, understanding real-world application structure, and applying practical software development principles to prepare for professional projects.
+                </p>
+
             </p>
         </div>
 
