also again same

--- a/index.html
+++ b/index.html
@@ -185,8 +185,9 @@
             <h3 class="hhh">What I’m Currently Focusing On</h3>
             <p>
                 <p>
-                  I am actively enhancing my front-end development skills by building responsive and interactive websites using HTML, CSS, and JavaScript. At the same time, I am revisiting Java fundamentals and object-oriented programming concepts to strengthen my problem-solving and backend readiness. My current focus is on writing clean, maintainable code, understanding real-world application structure, and applying practical software development principles to prepare for professional projects.
+                I am focused on building a strong foundation in software development and practical programming skills while enhancing my problem-solving and analytical abilities. I am actively learning industry-relevant tools and technologies, understanding project workflows, and improving my ability to deliver efficient and maintainable solutions. My aim is to contribute effectively in a professional environment and grow as a competent software engineer.
                 </p>
+
 
             </p>
         </div>
