made much more changes to make it correct

--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <title>Portfolio</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="/favicon.ico">
-    <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
 </head>
 <body>
 
@@ -23,8 +22,8 @@
 </header>
 
 <section class="hero fade-slide">
-    <h2>Portfolio</h2>
-    <p>From Netplay to Code Mastery</p>
+    <h2>Computer Science Undergraduate</h2>
+    <p>Frontend Developer | Java | Problem Solver</p>
 </section>
 
 <section id="about" class="section about-section fade-slide">
