--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <header class="navbar">
     <h1 class="logo">Revanth Joshua R</h1>
     <nav class="nav-links">
+        <div class="menu-toggle">&#9776;</div>
         <a href="#about">About</a>
         <a href="#experience">Experience</a>
         <a href="#education">Education</a>
