--- a/index.html
+++ b/index.html
@@ -210,6 +210,8 @@
         <button type="submit" class="send-btn">Send</button>
         <p id="formMsg"></p>
     </form>
+
+    <p id="formStatus"></p>
 </section>
 
 <footer class="footer">
