--- a/public/index.html
+++ b/public/index.html
@@ -5,15 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="/favicon.ico">
+    <link rel="icon" href="favicon.ico">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
 </head>
 <body>
 
 <header class="navbar">
     <h1 class="logo">Revanth Joshua R</h1>
+
+    <div class="menu-toggle">&#9776;</div>
+
     <nav class="nav-links">
-        <div class="menu-toggle">&#9776;</div>
         <a href="#about">About</a>
         <a href="#experience">Experience</a>
         <a href="#education">Education</a>
@@ -21,6 +23,7 @@
         <a href="#contact">Contact</a>
     </nav>
 </header>
+
 
 <section class="hero fade-slide">
     <h2>Computer Science Undergraduate</h2>
