changed in footer added icons

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
 
 <header class="navbar">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <h1 class="logo">Revanth Joshua R</h1>
 
     <div class="menu-toggle">&#9776;</div>
@@ -218,9 +219,34 @@
 </section>
 
 <footer class="footer">
-    <p>2025 Revanth Joshua R</p>
-</footer>
+  
+  <div class="footer-icons">
+    <a href="https://instagram.com/yourid" target="_blank" data-tooltip="Instagram">
+      <i class="fab fa-instagram"></i>
+    </a>
 
+    <a href="https://linkedin.com/in/yourid" target="_blank" data-tooltip="LinkedIn">
+      <i class="fab fa-linkedin-in"></i>
+    </a>
+
+    <a href="https://facebook.com/yourid" target="_blank" data-tooltip="Facebook">
+      <i class="fab fa-facebook-f"></i>
+    </a>
+
+    <a href="mailto:yourmail@gmail.com" data-tooltip="Email me">
+      <i class="fas fa-envelope"></i>
+    </a>
+
+    <a href="resume.pdf" download data-tooltip="View Resume">
+      <i class="fas fa-file-download"></i>
+    </a>
+  </div>
+
+  <p class="footer-text">
+    © 2025 Revanth Joshua R. All rights reserved.
+  </p>
+
+</footer>
 <script src="script.js"></script>
 </body>
 </html>
