--- a/index.html
+++ b/index.html
@@ -221,19 +221,19 @@
 <footer class="footer">
   
   <div class="footer-icons">
-    <a href="https://instagram.com/yourid" target="_blank" data-tooltip="Instagram">
+    <a href="instagram.com/revanth_joshua006/" target="_blank" data-tooltip="Instagram">
       <i class="fab fa-instagram"></i>
     </a>
 
-    <a href="https://linkedin.com/in/yourid" target="_blank" data-tooltip="LinkedIn">
+    <a href="https://www.linkedin.com/in/revanthjoshua" target="_blank" data-tooltip="LinkedIn">
       <i class="fab fa-linkedin-in"></i>
     </a>
 
-    <a href="https://facebook.com/yourid" target="_blank" data-tooltip="Facebook">
+    <a href="https://www.facebook.com/profile.php?id=61567838187393" target="_blank" data-tooltip="Facebook">
       <i class="fab fa-facebook-f"></i>
     </a>
 
-    <a href="mailto:yourmail@gmail.com" data-tooltip="Email me">
+    <a href="mailto:revanthjoshua77@gmail.com" data-tooltip="Email me">
       <i class="fas fa-envelope"></i>
     </a>
 
@@ -243,8 +243,8 @@
   </div>
 
   <p class="footer-text">
-    © 2025 Revanth Joshua R. All rights reserved.
-  </p>
+     2025 Revanth Joshua R.
+ </p>
 
 </footer>
 <script src="script.js"></script>
