--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
 <footer class="footer">
   
   <div class="footer-icons">
-    <a href="instagram.com/revanth_joshua006/" target="_blank" data-tooltip="Instagram">
+    <a href="https://instagram.com/revanth_joshua006/" target="_blank">
       <i class="fab fa-instagram"></i>
     </a>
 
