--- a/index.html
+++ b/index.html
@@ -27,8 +27,11 @@
 
 
 <section class="hero fade-slide">
-    <h2>Computer Science Undergraduate</h2>
-    <p>Frontend Developer | Java | Problem Solver</p>
+    <h2>Frontend Developer</h2>
+<p>
+Computer Science Student • Problem Solver • Java Programmer • Upskilling FullStack • Opens to Internships • 
+</p>
+
 </section>
 
 <section id="about" class="section about-section fade-slide">
