--- a/index.html
+++ b/index.html
@@ -40,7 +40,13 @@ Computer Science Student • Problem Solver • Java Programmer • Upskilling F
     <div class="about-text">
         <h2 class="abt">About Me</h2>
         <p class="abtme">
-            As a Computer Science undergraduate, I have developed a strong and comprehensive foundation in programming, problem-solving, and practical project development through a combination of academic coursework, hands-on projects, and real-world exposure. My journey has allowed me to work extensively with core programming concepts, applying them to design and build functional software solutions that not only strengthened my technical abilities but also enhanced my analytical thinking and structured approach to tackling complex problems. Beyond academics, I bring a unique dimension to my profile as an international-level volleyball player who has proudly represented India, an achievement that has instilled in me invaluable qualities such as discipline, resilience, leadership, and the ability to consistently perform under high-pressure environments. The experience of balancing rigorous sports commitments with demanding academic and technical responsibilities has trained me to manage time effectively, adapt quickly to dynamic situations, and maintain unwavering focus on long-term goals. This dual pursuit of excellence in both technology and sports reflects my determination to grow holistically, combining intellectual rigor with personal discipline. Looking ahead, I am deeply committed to building strong, practical technical skills and gaining industry-relevant experience, with a clear vision of securing a role in leading technology companies such as Microsoft, where I aspire to contribute meaningfully to impactful projects while continuing to evolve as a dedicated and innovative software professional.
+            Frontend Developer and Computer Science Engineering undergraduate with
+hands-on internship experience building responsive web interfaces using
+HTML, CSS, and JavaScript. Strong foundation in programming, DOM
+manipulation, and object-oriented principles. International-level
+volleyball player who has represented India, bringing discipline,
+leadership, and the ability to balance high-performance academics with
+technical work.
 
 
 
