--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ Computer Science Student • Problem Solver • Java Programmer • Upskilling F
 
     <div class="about-text">
         <h2 class="abt">About Me</h2>
-        <p class="abtme">
+        <p class="abtme" style="text-align: center;">
             Frontend Developer and Computer Science Engineering undergraduate with
 hands-on internship experience building responsive web interfaces using
 HTML, CSS, and JavaScript. Strong foundation in programming, DOM
@@ -54,6 +54,27 @@ technical work.
     </div>
 </section>
 
+<section id="skills" class="section fade-slide">
+  <h2>Technical Skills</h2>
+
+  <div class="skills-wrapper">
+    <div class="skills-left">
+      <div class="item">HTML, CSS, JavaScript</div>
+      <div class="item">Responsive Web Design</div>
+      <div class="item">Java (OOP Fundamentals)</div>
+      <div class="item">Python (Basic)</div>
+    </div>
+
+    <div class="skills-left">
+      <div class="item">DOM Manipulation</div>
+      <div class="item">Git & GitHub</div>
+      <div class="item">VS Code</div>
+      <div class="item">Version Control</div>
+    </div>
+  </div>
+</section>
+
+
 <section id="experience" class="section alt fade-slide">
 
   <div class="experience-wrapper">
@@ -61,12 +82,14 @@ technical work.
     <div class="experience-content">
       <h2 class="ex">Experience</h2>
       <div class="item">
-        <h3>Virtual Java Developer Intern</h3>
-        <p>
-          Gained hands-on experience in Java and OOP concepts; worked on small modules focusing on
-          file handling and version control (Git). Implemented and tested core features; submitted
-          code to GitHub and documented usage.
-        </p>
+        <h3>Frontend Developer Intern — M8 IT Solutions</h3>
+          <p>
+            Built responsive web pages using HTML, CSS, and JavaScript.
+            Improved UI consistency across multiple screen sizes.
+            Used Git and GitHub for version control and collaboration.
+            Deployed frontend applications using Vercel and followed
+            industry-level development workflows.
+          </p>
       </div>
 
       <div class="item">
@@ -78,13 +101,12 @@ technical work.
       </div>
 
       <div class="item">
-        <h3>Intern at M8 IT Solutions</h3>
-        <p>
-          Developing and maintaining responsive web applications using front-end and back-end
-          technologies. Working on UI design, API integration, database operations, and application
-          logic. Collaborating with the development team to implement features, debug issues, and
-          optimize performance while following industry coding standards.
-        </p>
+        <h3>Virtual Java Developer Intern — CodSoft & InternPE</h3>
+          <p>
+            Worked with Java and object-oriented programming concepts.
+            Implemented small modules focusing on logical problem-solving,
+            file handling, and structured coding practices.
+          </p>
       </div>
     </div>
 
@@ -94,6 +116,47 @@ technical work.
     </div>
   </div>
 </section>
+
+<section id="projects" class="section fade-slide">
+  <h2>Projects</h2>
+
+  <div class="item">
+    <h3>Personal Portfolio Website</h3>
+    <p>
+      Developed a responsive portfolio using HTML, CSS, and JavaScript
+      during my internship at M8 IT Solutions. Improved layout structure,
+      UI consistency, and deployed the project using Vercel.
+    </p>
+  </div>
+
+  <div class="item">
+    <h3>Career Pilot (AI-Based Guidance System)</h3>
+    <p>
+      Built a second-year academic project using AI-driven evaluation
+      techniques to generate customized study plans and daily improvement
+      tasks. Tracks user progress and provides continuous guidance.
+    </p>
+  </div>
+
+  <div class="item">
+    <h3>Vinted – Second-Hand E-Commerce App</h3>
+    <p>
+      Designed a marketplace prototype for buying and selling second-hand
+      clothing. Built using FlutterFlow with structured navigation, item
+      listing, and browsing features to promote sustainability.
+    </p>
+  </div>
+</section>
+
+<section id="certifications" class="section alt fade-slide">
+  <h2>Certifications</h2>
+
+  <div class="item">Full Stack Development Internship — M8 IT Solutions (Dec 2025)</div>
+  <div class="item">Oracle Certified Foundations Associate (Java) — Oracle University</div>
+  <div class="item">Python Certification — Besant Technologies</div>
+  <div class="item">Diploma in Computer Application (DCA) — CSC Computer Education (A Grade)</div>
+</section>
+
 
 <section id="education" class="section fade-slide">
 
@@ -147,14 +210,14 @@ technical work.
       </div>
 
       <div class="accomplishment-item">
-        <h3>International Sports Representation</h3>
-        <p>
-          Represented India in the ISF Beach Volleyball Championship held in Italy. Developed strong
-          discipline, resilience, teamwork, and the ability to perform under high-pressure
-          environments—qualities that directly translate to problem-solving and collaboration in
-          technical projects.
-        </p>
-      </div>
+  <h3>Sports Achievements</h3>
+  <p>
+    Represented India in ISF Beach Volleyball Championship, Italy (2019).
+    Secured 3rd place in college-level zonal volleyball tournament.
+    Developed discipline, teamwork, and performance under pressure.
+  </p>
+</div>
+
 
       <div class="accomplishment-item">
         <h3>National-Level Technical Paper Presentation</h3>
