--- a/index.html
+++ b/index.html
@@ -199,15 +199,6 @@ technical work.
     <!-- Left side: 75% content -->
     <div class="accomplishments-content">
       <h2 class="achievement">Accomplishments</h2>
-      <div class="accomplishment-item">
-        <h3>Full Stack Web Development Internship</h3>
-        <p>
-          Delivered functional software modules during my internship as a Full Stack Web Developer,
-          working within defined timelines and professional development workflows. Contributed to
-          front-end implementation, back-end logic integration, bug fixing, and version control
-          using Git, gaining hands-on experience with real-world production code.
-        </p>
-      </div>
 
       <div class="accomplishment-item">
   <h3>Sports Achievements</h3>
@@ -227,15 +218,6 @@ technical work.
           my research, technical writing, and public presentation skills.
         </p>
       </div>
-
-      <div class="accomplishment-item">
-        <h3>Academic & Practical Software Projects</h3>
-        <p>
-          Completed multiple academic and internship-based software projects using Java and web
-          technologies. Applied object-oriented programming principles, logical problem-solving,
-          and user-focused design to build functional and scalable software solutions.
-        </p>
-      </div>
     </div>
 
     <!-- Right side: 25% photo -->
@@ -246,32 +228,20 @@ technical work.
 </section>
 
 <section class="section fade-slide">
-    <h2>Skills & Focus</h2>
+  <h2>Current Focus</h2>
 
-    <div class="skills-wrapper">
-
-        <!-- LEFT 50% -->
-        <div class="skills-left">
-            <div class="item">HTML & CSS</div>
-            <div class="item">JavaScript (Basics)</div>
-            <div class="item">Java & OOP Concepts</div>
-            <div class="item">Git & GitHub</div>
-            <div class="item">Basic SQL</div>
-        </div>
-
-        <!-- RIGHT 50% -->
-        <div class="skills-right">
-            <h3 class="hhh">What I’m Currently Focusing On</h3>
-            <p>
-                <p>
-                I am focused on building a strong foundation in software development and practical programming skills while enhancing my problem-solving and analytical abilities. I am actively learning industry-relevant tools and technologies, understanding project workflows, and improving my ability to deliver efficient and maintainable solutions. My aim is to contribute effectively in a professional environment and grow as a competent software engineer.
-                </p>
-
-
-            </p>
-        </div>
-
+  <div class="skills-wrapper">
+    <div class="skills-right">
+      <p>
+        Currently strengthening my frontend development expertise by building
+        real-world projects using HTML, CSS, and JavaScript. Focusing on writing
+        cleaner, maintainable code, improving JavaScript fundamentals and DOM
+        manipulation, and following industry-level development workflows.
+        Actively preparing for internship opportunities by practicing
+        problem-solving and hands-on implementation.
+      </p>
     </div>
+  </div>
 </section>
 
 
