i think now its okay

--- a/index.html
+++ b/index.html
@@ -151,11 +151,14 @@ technical work.
 <section id="certifications" class="section alt fade-slide">
   <h2>Certifications</h2>
 
-  <div class="item">Full Stack Development Internship — M8 IT Solutions (Dec 2025)</div>
-  <div class="item">Oracle Certified Foundations Associate (Java) — Oracle University</div>
-  <div class="item">Python Certification — Besant Technologies</div>
-  <div class="item">Diploma in Computer Application (DCA) — CSC Computer Education (A Grade)</div>
+  <div class="cert-list">
+    <div class="cert-item">Full Stack Development Internship — M8 IT Solutions (Dec 2025)</div>
+    <div class="cert-item">Oracle Certified Foundations Associate (Java) — Oracle University</div>
+    <div class="cert-item">Python Certification — Besant Technologies</div>
+    <div class="cert-item">Diploma in Computer Application (DCA) — CSC Computer Education (A Grade)</div>
+  </div>
 </section>
+
 
 
 <section id="education" class="section fade-slide">
@@ -227,22 +230,21 @@ technical work.
   </div>
 </section>
 
-<section class="section fade-slide">
+<section id="focus" class="section fade-slide">
   <h2>Current Focus</h2>
 
-  <div class="skills-wrapper">
-    <div class="skills-right">
-      <p>
-        Currently strengthening my frontend development expertise by building
-        real-world projects using HTML, CSS, and JavaScript. Focusing on writing
-        cleaner, maintainable code, improving JavaScript fundamentals and DOM
-        manipulation, and following industry-level development workflows.
-        Actively preparing for internship opportunities by practicing
-        problem-solving and hands-on implementation.
-      </p>
-    </div>
+  <div class="focus-box">
+    <p>
+      Currently strengthening my frontend development expertise by building
+      real-world projects using HTML, CSS, and JavaScript. Focusing on writing
+      clean, maintainable code, improving JavaScript fundamentals and DOM
+      manipulation, and following industry-level development workflows.
+      Actively preparing for internship opportunities through hands-on
+      implementation and problem-solving.
+    </p>
   </div>
 </section>
+
 
 
 
