--- a/index.html
+++ b/index.html
@@ -55,33 +55,36 @@ technical work.
 </section>
 
 <section id="skills" class="section fade-slide">
+  <div class="container">
   <h2>Technical Skills</h2>
 
   <div class="skills-wrapper">
     <div class="skills-left">
-      <div class="item">HTML, CSS, JavaScript</div>
-      <div class="item">Responsive Web Design</div>
-      <div class="item">Java (OOP Fundamentals)</div>
-      <div class="item">Python (Basic)</div>
+      <div class="card">HTML, CSS, JavaScript</div>
+      <div class="card">Responsive Web Design</div>
+      <div class="card">Java (OOP Fundamentals)</div>
+      <div class="card">Python (Basic)</div>
     </div>
 
     <div class="skills-left">
-      <div class="item">DOM Manipulation</div>
-      <div class="item">Git & GitHub</div>
-      <div class="item">VS Code</div>
-      <div class="item">Version Control</div>
+      <div class="card">DOM Manipulation</div>
+      <div class="card">Git & GitHub</div>
+      <div class="card">VS Code</div>
+      <div class="card">Version Control</div>
     </div>
+  </div>
   </div>
 </section>
 
 
 <section id="experience" class="section alt fade-slide">
+  <div class="container">
 
   <div class="experience-wrapper">
     <!-- Left side: 75% -->
     <div class="experience-content">
       <h2 class="ex">Experience</h2>
-      <div class="item">
+      <div class="card">
         <h3>Frontend Developer Intern — M8 IT Solutions</h3>
           <p>
             Built responsive web pages using HTML, CSS, and JavaScript.
@@ -92,7 +95,7 @@ technical work.
           </p>
       </div>
 
-      <div class="item">
+      <div class="card">
         <h3>Technical Observer – Robotics & Automation Systems</h3>
         <p>
           Inker Robotics, Thrissur – Industry Visit. Observed real-world robotics applications,
@@ -100,7 +103,7 @@ technical work.
         </p>
       </div>
 
-      <div class="item">
+      <div class="card">
         <h3>Virtual Java Developer Intern — CodSoft & InternPE</h3>
           <p>
             Worked with Java and object-oriented programming concepts.
@@ -115,12 +118,14 @@ technical work.
       <img src="experience.jpg" alt="Experience Photo">
     </div>
   </div>
+  </div>
 </section>
 
 <section id="projects" class="section fade-slide">
+  <div class="container">
   <h2>Projects</h2>
 
-  <div class="item">
+  <div class="card">
     <h3>Personal Portfolio Website</h3>
     <p>
       Developed a responsive portfolio using HTML, CSS, and JavaScript
@@ -129,7 +134,7 @@ technical work.
     </p>
   </div>
 
-  <div class="item">
+  <div class="card">
     <h3>Career Pilot (AI-Based Guidance System)</h3>
     <p>
       Built a second-year academic project using AI-driven evaluation
@@ -138,7 +143,7 @@ technical work.
     </p>
   </div>
 
-  <div class="item">
+  <div class="card">
     <h3>Vinted – Second-Hand E-Commerce App</h3>
     <p>
       Designed a marketplace prototype for buying and selling second-hand
@@ -146,22 +151,26 @@ technical work.
       listing, and browsing features to promote sustainability.
     </p>
   </div>
+  </div>
 </section>
 
 <section id="certifications" class="section alt fade-slide">
+  <div class="container">
   <h2>Certifications</h2>
 
   <div class="cert-list">
-    <div class="cert-item">Full Stack Development Internship — M8 IT Solutions (Dec 2025)</div>
-    <div class="cert-item">Oracle Certified Foundations Associate (Java) — Oracle University</div>
-    <div class="cert-item">Python Certification — Besant Technologies</div>
-    <div class="cert-item">Diploma in Computer Application (DCA) — CSC Computer Education (A Grade)</div>
+    <div class="card">Full Stack Development Internship — M8 IT Solutions (Dec 2025)</div>
+    <div class="card">Oracle Certified Foundations Associate (Java) — Oracle University</div>
+    <div class="card">Python Certification — Besant Technologies</div>
+    <div class="card">Diploma in Computer Application (DCA) — CSC Computer Education (A Grade)</div>
+  </div>
   </div>
 </section>
 
 
 
 <section id="education" class="section fade-slide">
+  <div class="container">
 
 
 
@@ -174,28 +183,30 @@ technical work.
     <!-- Right side: 75% content -->
     <div class="education-content">
       <h2 class="edu">Education</h2>
-      <div class="item">
+      <div class="card">
         <h3>Kumutha Matriculation Higher Secondary School</h3>
         <p>HSC - 79.1%</p>
         <p>Completed in 2024</p>
       </div>
 
-      <div class="item">
+      <div class="card">
         <h3>Kumutha Matriculation Higher Secondary School</h3>
         <p>SSLC - 80%</p>
         <p>Completed in 2022</p>
       </div>
 
-      <div class="item">
+      <div class="card">
         <h3>SNS College of Engineering</h3>
         <p>B.E – Computer Science and Technology (Second Year)</p>
         <p>2024–2025 CGPA – 8.00</p>
       </div>
     </div>
   </div>
+  </div>
 </section>
 
 <section id="accomplishments" class="section alt fade-slide">
+  <div class="container">
   
 
   <div class="accomplishments-wrapper">
@@ -203,7 +214,7 @@ technical work.
     <div class="accomplishments-content">
       <h2 class="achievement">Accomplishments</h2>
 
-      <div class="accomplishment-item">
+      <div class="card">
   <h3>Sports Achievements</h3>
   <p>
     Represented India in ISF Beach Volleyball Championship, Italy (2019).
@@ -213,7 +224,7 @@ technical work.
 </div>
 
 
-      <div class="accomplishment-item">
+      <div class="card">
         <h3>National-Level Technical Paper Presentation</h3>
         <p>
           Presented a technical paper at UDHAYAM’25, a national-level technical symposium organized
@@ -228,12 +239,14 @@ technical work.
       <img src="achievements.jpeg" alt="Accomplishments Photo">
     </div>
   </div>
+  </div>
 </section>
 
 <section id="focus" class="section fade-slide">
+  <div class="container">
   <h2>Current Focus</h2>
 
-  <div class="focus-box">
+  <div class="card">
     <p>
       Currently strengthening my frontend development expertise by building
       real-world projects using HTML, CSS, and JavaScript. Focusing on writing
@@ -243,9 +256,8 @@ technical work.
       implementation and problem-solving.
     </p>
   </div>
+  </div>
 </section>
-
-
 
 
 <section id="contact" class="section fade-slide">
