center alligned everything

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ technical work.
 
 <section id="skills" class="section fade-slide">
   <div class="container">
-  <h2>Technical Skills</h2>
+  <h2 style="text-align: center;">Technical Skills</h2>
 
   <div class="skills-wrapper">
     <div class="skills-left">
@@ -123,7 +123,7 @@ technical work.
 
 <section id="projects" class="section fade-slide">
   <div class="container">
-  <h2>Projects</h2>
+  <h2 style="text-align: center;">Projects</h2>
 
   <div class="card">
     <h3>Personal Portfolio Website</h3>
@@ -156,7 +156,7 @@ technical work.
 
 <section id="certifications" class="section alt fade-slide">
   <div class="container">
-  <h2>Certifications</h2>
+  <h2 style="text-align: center;">Certifications</h2>
 
   <div class="cert-list">
     <div class="card">Full Stack Development Internship — M8 IT Solutions (Dec 2025)</div>
@@ -243,8 +243,8 @@ technical work.
 </section>
 
 <section id="focus" class="section fade-slide">
+  <h2 style="text-align: center;">Current Focus</h2>
   <div class="container">
-  <h2>Current Focus</h2>
 
   <div class="card">
     <p>
